Fix not visible mobile button:

--- a/src/app/record/components/work-stack-group/work-stack-group.component.scss
+++ b/src/app/record/components/work-stack-group/work-stack-group.component.scss
@@ -50,6 +50,16 @@ p.empty {
     }
   }
 }
+.columns-4 :host {
+  .works-buttons {
+    .controls {
+      flex-direction: column;
+      button {
+        width: 100%;
+      }
+    }
+  }
+}
 
 button {
   margin-inline-start: 8px;
